@@ -41,8 +41,8 @@ TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 /// Policy factory for all RTCORBA related policies.
 class TAO_RT_PolicyFactory
-  : public PortableInterceptor::PolicyFactory,
-    public CORBA::LocalObject
+  : public virtual PortableInterceptor::PolicyFactory,
+    public virtual TAO_Local_RefCounted_Object
 {
 public:
 
